interstellar/tests/snapshots/gql_snapshots__parse_merge_edge_pattern_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Merge:
        pattern:
          elements:
            - Node:
                variable: a
                labels:
                  - Person
                properties:
                  - - name
                    - String: Alice
                where_clause: ~
            - Edge:
                variable: ~
                labels:
                  - KNOWS
                direction: Outgoing
                quantifier: ~
                properties: []
                where_clause: ~
            - Node:
                variable: b
                labels:
                  - Person
                properties:
                  - - name
                    - String: Bob
                where_clause: ~
        on_create: ~
        on_match: ~
  foreach_clauses: []
  return_clause: ~
