interstellar/tests/snapshots/gql_snapshots__parse_merge_with_return_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Merge:
        pattern:
          elements:
            - Node:
                variable: p
                labels:
                  - Person
                properties:
                  - - name
                    - String: Alice
                where_clause: ~
        on_create: ~
        on_match: ~
  foreach_clauses: []
  return_clause:
    distinct: false
    items:
      - expression:
          Variable: p
        alias: ~
